--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -174,3 +174,25 @@ year = "1991"
   year={1998},
   publisher={University of Notre Dame}
 }
+
+@article{hattie2007power,
+  title={The power of feedback},
+  author={Hattie, John and Timperley, Helen},
+  journal={Review of educational research},
+  volume={77},
+  number={1},
+  pages={81--112},
+  year={2007},
+  publisher={Sage Publications}
+}
+
+@article{lumsden1988characteristics,
+  title={A characteristics approach to the evaluation of economics software packages},
+  author={Lumsden, Keith and Scott, Alex},
+  journal={The Journal of Economic Education},
+  volume={19},
+  number={4},
+  pages={353--362},
+  year={1988},
+  publisher={Taylor \& Francis}
+}
