--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -196,3 +196,61 @@ year = "1991"
   year={1988},
   publisher={Taylor \& Francis}
 }
+
+@article{clariana2000applying,
+  title={Applying a connectionist description of feedback timing},
+  author={Clariana, Roy B and Wagner, Daren and Murphy, Lucia C Roher},
+  journal={Educational Technology Research and Development},
+  volume={48},
+  number={3},
+  pages={5--22},
+  year={2000},
+  publisher={Springer}
+}
+
+@article{lim2008spirit,
+  title={Spirit of the game: Empowering students as designers in schools?},
+  author={Lim, Cher Ping},
+  journal={British Journal of Educational Technology},
+  volume={39},
+  number={6},
+  pages={996--1003},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{111701519980901,
+Abstract = {Focuses on the life training skills acquired by aviation students through the use of Flight Simulators designed by Microsoft Corp. Training credit given by the Federal Aviation Administration to pilots; Aviation simulator classifications; Benefits and limitations of the personal computer-based training.},
+Author = {Homan, Willem and Williams, Kathleen},
+ISSN = {10629351},
+Journal = {Tech Directions},
+Keywords = {Computer software, Flight training, Microsoft Corp.},
+Number = {2},
+Pages = {33},
+Title = {PC-based flight simulators: No more games.},
+Volume = {58},
+URL = {http://search.ebscohost.com.ezproxy1.bath.ac.uk/login.aspx?direct=true&db=bth&AN=1117015&site=ehost-live},
+Year = {1998},
+}
+
+@article{lee2013learning,
+  title={Learning mathematics—letting the pupils have their say},
+  author={Lee, Clare and Johnston-Wilder, Sue},
+  journal={Educational Studies in Mathematics},
+  volume={83},
+  number={2},
+  pages={163--180},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{cheng2014graphical,
+  title={Graphical notations for syllogisms: how alternative representations impact the accessibility of concepts},
+  author={Cheng, Peter C-H},
+  journal={Journal of Visual Languages \& Computing},
+  volume={25},
+  number={3},
+  pages={170--185},
+  year={2014},
+  publisher={Elsevier}
+}
