Add new articles

--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -254,3 +254,12 @@ Year = {1998},
   year={2014},
   publisher={Elsevier}
 }
+
+@inproceedings{lamport1983good,
+  title={What good is temporal logic?},
+  author={Lamport, Leslie},
+  booktitle={IFIP congress},
+  volume={83},
+  pages={657--668},
+  year={1983}
+}
